--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "android-reset-cache": "npx react-native start --reset-cache",
     "test-devices": "adb devices",
     "start-devices": "adb tcpip 5555",
-    "start-connect": "adb connect ipPhone:5555",
-    "android-clean-cache": "cd android ./gradlew clean cd .. npx react-native run-android",
+    "start-connect": "adb connect 192.168.1.5:5555",
+    "clean": "cd android && gradlew clean",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -18,8 +18,13 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "babel-plugin-module-resolver": "^5.0.0",
     "gulp": "^4.0.2",
+    "i": "^0.3.7",
+    "npm": "^10.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.10",
     "react": "18.2.0",
     "react-native": "^0.71.7",
     "react-native-gesture-handler": "^2.14.0",
@@ -28,7 +33,10 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^14.1.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^9.2.0",
+    "tailwindcss": "^3.4.0",
+    "twrnc": "^3.6.7",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
@@ -39,6 +47,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
