--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android-reset-cache": "npx react-native start --reset-cache",
     "test-devices": "adb devices",
     "start-devices": "adb tcpip 5555",
-    "start-connect": "adb connect 192.168.1.5:5555",
+    "start-connect": "adb connect 192.168.1.10:5555",
     "clean": "cd android && gradlew clean",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -24,7 +24,6 @@
     "gulp": "^4.0.2",
     "i": "^0.3.7",
     "npm": "^10.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.10",
     "react": "18.2.0",
     "react-native": "^0.71.7",
     "react-native-gesture-handler": "^2.14.0",
@@ -45,16 +44,38 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
+    "@types/cookie": "^0.5.3",
+    "@types/crypto-js": "^4.1.2",
     "@types/jest": "^29.2.1",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/lodash": "^4.14.199",
     "@types/react": "^18.0.24",
-    "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-native-audio": "^4.3.5",
+    "@types/react-native-push-notification": "^8.1.4",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-no-relative-import-paths": "^1.5.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^5.4.2",
+    "react-devtools": "^2.1.7",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "4.8.4"
   },
   "jest": {
