--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android-reset-cache": "npx react-native start --reset-cache",
     "test-devices": "adb devices",
     "start-devices": "adb tcpip 5555",
-    "start-connect": "adb connect 192.168.1.10:5555",
+    "start-connect": "adb connect 192.168.1.2:5555",
     "clean": "cd android && gradlew clean",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -15,14 +15,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
-    "@react-navigation/stack": "^6.3.16",
+    "@react-navigation/stack": "^6.3.20",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "babel-plugin-module-resolver": "^5.0.0",
     "gulp": "^4.0.2",
     "i": "^0.3.7",
+    "moment": "^2.30.1",
     "npm": "^10.2.5",
     "react": "18.2.0",
     "react-native": "^0.71.7",
